infrastructure/k8s-gke/manifests/apps-cluster/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-services
  labels:
    name: app-services
    cluster: ticket-booking-apps
