infrastructure/k8s-gke/manifests/apps-cluster/data-cluster-service-updated.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-cluster-postgres
  namespace: app-services
spec:
  type: ExternalName
  externalName: 10.142.0.21
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: data-cluster-redis-read
  namespace: app-services
spec:
  type: ExternalName
  externalName: 10.142.0.22
  ports:
    - port: 6379
      targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: data-cluster-redis-write
  namespace: app-services
spec:
  type: ExternalName
  externalName: 10.142.0.24
  ports:
    - port: 6379
      targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: data-cluster-redis-queue
  namespace: app-services
spec:
  type: ExternalName
  externalName: 10.142.0.25
  ports:
    - port: 6379
      targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: data-cluster-elasticsearch
  namespace: app-services
spec:
  type: ExternalName
  externalName: 10.142.0.26
  ports:
    - port: 9200
      targetPort: 9200
